--- a/datapackage.yaml
+++ b/datapackage.yaml
@@ -8,7 +8,7 @@ version: 0.1
 contributors:
   - title: Diretoria Central de Transparência Ativa
     role: publisher
-    mail: transparencia@cge.mg.gov.br
+    email: transparencia@cge.mg.gov.br
 licenses:
   - name: CC-BY-4.0
     title: Creative Commons Attribution 4.0
@@ -18,23 +18,27 @@ keywords:
   - 'auxílio emergencial'
   - 'renda minas'
   - 'programas socioassistenciais'
+scheme: file
 resources:
-  - dialect:
-     delimiter: ;
+  - dialect: schemas/dialect_v1.yaml
+    encoding: utf-8
+    format: csv
+    hashing: md5
+    name: renda-minas-2020
+    path: data/renda-minas-2020.csv
+    title: Renda Minas
+    profile: tabular-data-resource
+    schema: schemas/schema_v1.yaml
+    scheme: file
+  - dialect: schemas/dialect_v1.yaml
     encoding: utf-8
     format: csv
     hashing: md5
     name: auxilio-emergencial-mineiro-2021
     path: data/auxilio-emergencial-mineiro-2021.csv
+    title: Auxílio Emergencial Mineiro
     profile: tabular-data-resource
-    schema:
-      fields:
-        - name: CPF
-          type: string
-        - name: NOME
-          type: string
-        - name: GRU_PAG
-          type: string
-    scheme: file
+    schema: schemas/schema_v1.yaml
+
 
 
